--- a/common/common.scss
+++ b/common/common.scss
@@ -260,11 +260,7 @@ html {
     left: 0;
     height: 100vh;
     width: 100vw;
-    background: linear-gradient(
-      90deg,
-      var(--tertiary-hover) 0%,
-      var(--tertiary) 100%
-    );
+    background: #000000;
     clip-path: ellipse(148% 70% at 91% -14%);
   }
   body.no-ember .background-container {
