--- a/common/common.scss
+++ b/common/common.scss
@@ -271,7 +271,7 @@ html {
 html body #main-outlet {
   margin-top: 30px;
   margin-bottom: 50px;
-  background: var(--secondary);
+  background: none;
   border-radius: 1em;
   padding: 3em 3em 5%;
   max-width: 1150px;
