--- a/common/common.scss
+++ b/common/common.scss
@@ -576,3 +576,8 @@ html body #main-outlet {
 .title-voting {
   padding-left: 14px;
 }
+
+#navigation-bar {
+  background-color: rgba(var(--secondary), 0.25);
+  border-radius: 12px;
+}
