--- a/common/common.scss
+++ b/common/common.scss
@@ -622,3 +622,7 @@ html body #main-outlet {
 .user-menu.revamped #quick-access-profile li > * {
   border-radius: 12px !important;
 }
+
+.activity {
+  border-radius: 12px !important;
+}
