--- a/common/common.scss
+++ b/common/common.scss
@@ -619,7 +619,7 @@ html body #main-outlet {
   background-color: rgba(var(--tertiary-hover-rgb), 0.5);
 }
 
-.user-menu.revamped #quick-access-profile li > * {
+#quick-access-profile li {
   border-radius: 12px !important;
 }
 
