--- a/common/common.scss
+++ b/common/common.scss
@@ -623,6 +623,6 @@ html body #main-outlet {
   border-radius: 12px !important;
 }
 
-.activity {
-  border-radius: 12px !important;
+.active a {
+  border: none !important;
 }
