--- a/common/common.scss
+++ b/common/common.scss
@@ -635,3 +635,7 @@ html body #main-outlet {
   border: none !important;
   border-radius: 12px !important;
 }
+
+.topic-list-item:hover {
+	border:none !important;
+}
