--- a/common/common.scss
+++ b/common/common.scss
@@ -628,14 +628,27 @@ html body #main-outlet {
 }
 
 .select-kit {
-  border-radius: 12px !important;
+  border-radius: 8px !important;
 }
 
 .list-controls .combo-box .combo-box-header {
   border: none !important;
-  border-radius: 12px !important;
+  border-radius: 8px !important;
 }
 
 .topic-list-item:hover {
 	border:none !important;
+}
+
+.select-kit-body {
+  border-radius: 8px !important;
+}
+
+.select-kit.combo-box .select-kit-row {
+	margin-top: 3px;
+  margin-bottom: 3px;
+  margin-right: 5px;
+  margin-left: 5px;
+	min-height: 1px;
+  border-radius: 8px;
 }
