--- a/common/common.scss
+++ b/common/common.scss
@@ -652,3 +652,8 @@ html body #main-outlet {
 	min-height: 1px;
   border-radius: 8px;
 }
+
+.topic-list .topic-list-header .topic-list-data, .topic-list .topic-list-item .topic-list-data {
+	border-radius: 8px;
+  margin-bottom: 5px;
+}
