--- a/common/common.scss
+++ b/common/common.scss
@@ -661,3 +661,7 @@ html body #main-outlet {
 .d-modal__container {
   border-radius: 12px;
 }
+
+.user-menu .quick-access-panel .read, .user-notifications-list .read {
+	border-radius: 12px;
+}
