--- a/common/common.scss
+++ b/common/common.scss
@@ -665,3 +665,11 @@ html body #main-outlet {
 .user-menu .quick-access-panel .read, .user-notifications-list .read {
 	border-radius: 12px;
 }
+
+.primary {
+  border: none;
+}
+
+.new-user-wrapper .user-navigation {
+	border: none;
+}
