--- a/common/common.scss
+++ b/common/common.scss
@@ -710,7 +710,7 @@ html body #main-outlet {
 }
 
 .nav-pills > li a.active, .nav-pills > li button.active {
-	color: var(--d-nav-color--active);
+	color: none !important;
 	background: rgba(var(--tertiary-very-low), 0.5) !important;
   border: none !important;
 }
