--- a/common/common.scss
+++ b/common/common.scss
@@ -710,7 +710,7 @@ html body #main-outlet {
 }
 
 .nav-pills > li a.active, .nav-pills > li button.active {
-	color: none !important;
+	color: #fff !important;
 	background: rgba(var(--primary-rgb), 0.5) !important;
   border: none !important;
   box-shadow: none !important;
