--- a/scss/sidebar-desktop.scss
+++ b/scss/sidebar-desktop.scss
@@ -46,6 +46,6 @@ body.has-sidebar-page {
 	background: none !important;
 }
 
-.sidebar-section-link-wrapper .sidebar-section-link:focus, .sidebar-section-link-wrapper .sidebar-section-link:hover {
+.sidebar-section-link-wrapper .sidebar-section-link, .sidebar-section-link-wrapper .sidebar-section-link {
 	border-radius: 12px;
 }
