--- a/common/common.scss
+++ b/common/common.scss
@@ -252,7 +252,7 @@ div.ac-wrap {
 
 html {
   body:not(.no-ember) {
-    background: #000000;
+    background: #0F0F0F;
   }
   .background-container {
     position: fixed;
@@ -260,7 +260,7 @@ html {
     left: 0;
     height: 100vh;
     width: 100vw;
-    background: #000000;
+    background: #0F0F0F;
     clip-path: ellipse(148% 70% at 91% -14%);
   }
   body.no-ember .background-container {
