--- a/scss/sidebar-desktop.scss
+++ b/scss/sidebar-desktop.scss
@@ -49,3 +49,7 @@ body.has-sidebar-page {
 .sidebar-section-link-wrapper .sidebar-section-link, .sidebar-section-link-wrapper .sidebar-section-link {
 	border-radius: 12px;
 }
+
+.sidebar-container {
+  border: 1px #3E3E3E;
+}
