--- a/scss/sidebar-desktop.scss
+++ b/scss/sidebar-desktop.scss
@@ -53,3 +53,7 @@ body.has-sidebar-page {
 .sidebar-wrapper {
   border: 1px solid #3E3E3E;
 }
+
+.sidebar-section-link-content-text {
+  font-size: 16px;
+}
