--- a/common/common.scss
+++ b/common/common.scss
@@ -731,3 +731,7 @@ html body #main-outlet {
   border-radius: 8px;
   margin-left: 7px;
 }
+
+.new-user-content-wrapper {
+	background-color: rgba(var(--secondary-rgb), 0.25);
+}
