--- a/common/common.scss
+++ b/common/common.scss
@@ -734,4 +734,6 @@ html body #main-outlet {
 
 .new-user-content-wrapper {
 	background-color: rgba(var(--secondary), 0.25);
+  border-radius: 16px;
+  padding: 16px;
 }
