--- a/common/common.scss
+++ b/common/common.scss
@@ -733,7 +733,7 @@ html body #main-outlet {
 }
 
 .new-user-content-wrapper {
-	background-color: rgba(var(--secondary), 0.25) !important;
+	background-color: var(--secondary) !important;
   border-radius: 16px;
   padding: 16px;
 }
