--- a/common/common.scss
+++ b/common/common.scss
@@ -736,4 +736,11 @@ html body #main-outlet {
 	background-color: var(--secondary) !important;
   border-radius: 16px;
   padding: 16px;
+  margin-top: 16px;
+}
+.container .posts {
+	background-color: var(--secondary) !important;
+  border-radius: 16px;
+  padding: 16px;
+  margin-top: 16px;
 }
