--- a/common/common.scss
+++ b/common/common.scss
@@ -738,7 +738,7 @@ html body #main-outlet {
   padding: 16px;
   margin-top: 16px;
 }
-.container .posts {
+.topic-post {
 	background-color: var(--secondary) !important;
   border-radius: 16px;
   padding: 16px;
