--- a/common/common.scss
+++ b/common/common.scss
@@ -737,12 +737,14 @@ html body #main-outlet {
   border-radius: 16px;
   padding: 16px;
   margin-top: 16px;
+  border: 1px #3E3E3E solid;
 }
 .topic-post {
 	background-color: var(--secondary) !important;
   border-radius: 16px;
   padding: 16px;
   margin-top: 16px;
+  border: 1px #3E3E3E solid;
 }
 
 .topic-avatar {
