--- a/common/common.scss
+++ b/common/common.scss
@@ -746,6 +746,13 @@ html body #main-outlet {
   margin-top: 16px;
   border: 1px #3E3E3E solid !important;
 }
+.topics {
+	background-color: var(--secondary) !important;
+  border-radius: 16px;
+  padding: 16px;
+  margin-top: 16px;
+  border: 1px #3E3E3E solid !important;
+}
 
 .topic-avatar {
   border: none !important;
