--- a/common/common.scss
+++ b/common/common.scss
@@ -370,12 +370,12 @@ html body #main-outlet {
       box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.05);
       overflow: hidden;
       &.visited {
-        border: 0px solid rgba(var(--primary-rgb), 0.1);
+        border: 1px #3E3E3E solid;
         .discourse-tag {
           opacity: 0.75;
         }
         &:hover {
-          border: 1px solid rgba(var(--primary-rgb), 0.25);
+          border: 1px rgba(var(--primary-rgb), 0.3) solid;
           .discourse-tag {
             opacity: 1;
           }
