--- a/common/common.scss
+++ b/common/common.scss
@@ -773,3 +773,7 @@ html body #main-outlet {
 .blockquote {
   border-radius: 16px !important;
 }
+.chat-channel {
+  background-color: var(--secondary);
+  border-radius: 16px;
+}
