--- a/common/common.scss
+++ b/common/common.scss
@@ -775,10 +775,10 @@ html body #main-outlet {
 }
 .chat-channel {
   background-color: var(--secondary);
-  border-bottom-left-radius: 16px;
-  border-bottom-right-radius: 16px;
-  border-top-right-radius: 0px;
-  border-top-left-radius: 0px;
+  border-bottom-left-radius: 16px !important;
+  border-bottom-right-radius: 16px !important;
+  border-top-right-radius: 0px !important;
+  border-top-left-radius: 0px !important;
   border-bottom: 1px #3E3E3E solid !important;
   border-right: 1px #3E3E3E solid !important;
   border-left: 1px #3E3E3E solid !important;
