--- a/common/common.scss
+++ b/common/common.scss
@@ -796,3 +796,7 @@ html body #main-outlet {
   border-radius: 16px !important;
   border: none !important;
 }
+
+.btn-icon {
+  border-radius: 16px;
+}
