--- a/common/common.scss
+++ b/common/common.scss
@@ -789,14 +789,10 @@ html body #main-outlet {
   border-left: 1px #3E3E3E solid !important;
 }
 .chat-message-actions {
-  border-radius: 16px;
+  border-radius: 16px !important;
 }
 
 .chat-message-reaction {
   border-radius: 16px !important;
   border: none !important;
-}
-
-.btn-icon {
-  border-radius: 16px;
 }
