--- a/common/common.scss
+++ b/common/common.scss
@@ -796,3 +796,8 @@ html body #main-outlet {
   border-radius: 16px !important;
   border: none !important;
 }
+
+.chat-message-actions .more-buttons.dropdown-select-box .select-kit-header .select-kit-header-wrapper .d-icon {
+  border-radius: 16px !important;
+  border: none !important;
+}
