--- a/common/common.scss
+++ b/common/common.scss
@@ -797,7 +797,7 @@ html body #main-outlet {
   border: none !important;
 }
 
-.chat-message-actions .more-buttons.dropdown-select-box .select-kit-header .select-kit-header-wrapper .d-icon {
+.select-kit-header-wrapper {
   border-radius: 16px !important;
   border: none !important;
 }
