--- a/common/common.scss
+++ b/common/common.scss
@@ -801,3 +801,8 @@ html body #main-outlet {
   border-radius: 16px !important;
   border: none !important;
 }
+
+.chat-message-actions .more-buttons.dropdown-select-box .select-kit-header {
+  border-radius: 16px !important;
+  border: none !important;
+}
