--- a/common/common.scss
+++ b/common/common.scss
@@ -808,4 +808,6 @@ html body #main-outlet {
 }
 .select-kit .select-kit-row.is-highlighted {
 	border-radius: 16px;
+  padding-right: 8px;
+  padding-left: 16px;
 }
