--- a/common/common.scss
+++ b/common/common.scss
@@ -813,3 +813,26 @@ html body #main-outlet {
   border-radius: 16px;
   border: 1px #3E3E3E solid !important;
 }
+
+.c-list {
+  background-color: var(--secondary);
+  border-bottom-left-radius: 16px !important;
+  border-bottom-right-radius: 16px !important;
+  border-top-right-radius: 0px !important;
+  border-top-left-radius: 0px !important;
+  border-bottom: 1px #3E3E3E solid !important;
+  border-right: 1px #3E3E3E solid !important;
+  border-left: 1px #3E3E3E solid !important;
+}
+
+.chat-retention-reminder {
+  background-color: var(--secondary);
+  border-bottom-left-radius: 16px !important;
+  border-bottom-right-radius: 16px !important;
+  border-top-right-radius: 0px !important;
+  border-top-left-radius: 0px !important;
+  border-bottom: 1px #3E3E3E solid !important;
+  border-right: 1px #3E3E3E solid !important;
+  border-left: 1px #3E3E3E solid !important;
+}
+
