--- a/common/common.scss
+++ b/common/common.scss
@@ -831,7 +831,7 @@ html body #main-outlet {
   border-bottom: 1px #3E3E3E solid !important;
 }
 
-.c-list {
+.c-channel-info {
   background-color: var(--secondary);
   border-bottom-left-radius: 16px !important;
   border-bottom-right-radius: 16px !important;
