--- a/common/common.scss
+++ b/common/common.scss
@@ -823,6 +823,7 @@ html body #main-outlet {
   border-bottom: 1px #3E3E3E solid !important;
   border-right: 1px #3E3E3E solid !important;
   border-left: 1px #3E3E3E solid !important;
+  max-width: 1035px !important;
 }
 
 .chat-retention-reminder {
@@ -840,5 +841,5 @@ html body #main-outlet {
   border-bottom: 1px #3E3E3E solid !important;
   border-right: 1px #3E3E3E solid !important;
   border-left: 1px #3E3E3E solid !important;
-  width: 100% !important;
+  max-width: 1035px !important;
 }
