--- a/common/common.scss
+++ b/common/common.scss
@@ -782,7 +782,7 @@ html body #main-outlet {
   border-bottom: 1px #3E3E3E solid !important;
   border-right: 1px #3E3E3E solid !important;
   border-left: 1px #3E3E3E solid !important;
-  max-width: 1035px !important;
+  width: 1055px !important;
 }
 .c-navbar-container {
   border-top: 1px #3E3E3E solid !important;
