--- a/common/common.scss
+++ b/common/common.scss
@@ -843,3 +843,9 @@ html body #main-outlet {
   border-left: 1px #3E3E3E solid !important;
   max-width: 1035px !important;
 }
+
+.fk-d-toast {
+  background-color: var(--secondary);
+  border-radius: 16px !important;
+  border-bottom: 1px #3E3E3E solid !important;
+}
