--- a/scss/sidebar-desktop.scss
+++ b/scss/sidebar-desktop.scss
@@ -57,3 +57,12 @@ body.has-sidebar-page {
 .sidebar-section-link-content-text {
   font-size: 16px;
 }
+
+.sidebar-container {
+  border: none !important;
+}
+
+.d-header {
+  box-shadow: none !important;
+  border-bottom: 1px #3E3E3E solid !important;
+}
