--- a/scss/sidebar-desktop.scss
+++ b/scss/sidebar-desktop.scss
@@ -48,6 +48,7 @@ body.has-sidebar-page {
 
 .sidebar-section-link-wrapper .sidebar-section-link, .sidebar-section-link-wrapper .sidebar-section-link {
 	border-radius: 12px;
+  border-bottom: 1px #3E3E3E solid !important;
 }
 
 .sidebar-wrapper {
@@ -64,5 +65,10 @@ body.has-sidebar-page {
 
 .d-header {
   box-shadow: none !important;
+  border-bottom: 1px #3E3E3E solid !important;
+}
+
+.sidebar-more-section-links-details-content-wrapper {
+	border-radius: 12px;
   border-bottom: 1px #3E3E3E solid !important;
 }
