--- a/scss/sidebar-desktop.scss
+++ b/scss/sidebar-desktop.scss
@@ -71,7 +71,11 @@ body.has-sidebar-page {
   border-bottom: 1px #3E3E3E solid !important;
 }
 
-.sidebar-more-section-links-details-content-wrapper {
+.sidebar-more-section-links-details-content {
 	border-radius: 12px;
   border-bottom: 1px #3E3E3E solid !important;
+}
+
+.sidebar-more-section-links-details-content-main {
+  border: none !important;
 }
