--- a/scss/sidebar-desktop.scss
+++ b/scss/sidebar-desktop.scss
@@ -76,6 +76,10 @@ body.has-sidebar-page {
   border-bottom: 1px #3E3E3E solid !important;
 }
 
-.sidebar-more-section-links-details-content-main {
+.sidebar-more-section-links-details-content-main li {
+  border: none !important;
+}
+
+.sidebar-more-section-links-details-content-footer {
   border: none !important;
 }
