--- a/scss/sidebar-desktop.scss
+++ b/scss/sidebar-desktop.scss
@@ -77,8 +77,9 @@ body.has-sidebar-page {
   border-bottom: 1px #3E3E3E solid !important;
 }
 
-.sidebar-more-section-links-details-content-main li {
+.sidebar-more-section-links-details-content-main li:hover {
   border: none !important;
+  padding: 4px !important;
 }
 
 .sidebar-more-section-links-details-content-footer {
