--- a/scss/sidebar-desktop.scss
+++ b/scss/sidebar-desktop.scss
@@ -52,7 +52,7 @@ body.has-sidebar-page {
 
 .sidebar-section-link-wrapper:hover .sidebar-section-link:hover, .sidebar-section-link-wrapper:hover .sidebar-section-link:hover {
   border: 1px #3E3E3E solid !important;
-  padding: 15px !important;
+  padding: 15px;
 }
 
 .sidebar-wrapper {
