--- a/scss/sidebar-desktop.scss
+++ b/scss/sidebar-desktop.scss
@@ -77,7 +77,7 @@ body.has-sidebar-page {
   border-bottom: 1px #3E3E3E solid !important;
 }
 
-.sidebar-more-section-links-details-content-main li:hover {
+.sidebar-section-link-wrapper a:hover {
   border: none !important;
   padding: 4px !important;
 }
