--- a/scss/sidebar-desktop.scss
+++ b/scss/sidebar-desktop.scss
@@ -51,7 +51,7 @@ body.has-sidebar-page {
 }
 
 .sidebar-section-link-wrapper:hover .sidebar-section-link:hover, .sidebar-section-link-wrapper:hover .sidebar-section-link:hover {
-  border: 1px #3E3E3E solid !important;
+  border: 1px #3E3E3E solid;
   padding: 15px;
 }
 
