--- a/scss/sidebar-desktop.scss
+++ b/scss/sidebar-desktop.scss
@@ -85,3 +85,7 @@ body.has-sidebar-page {
 .sidebar-more-section-links-details-content-footer {
   border: none !important;
 }
+
+[data-list-item-name="all-categories"] a {
+  padding: 15px;
+}
