--- a/scss/sidebar-desktop.scss
+++ b/scss/sidebar-desktop.scss
@@ -86,6 +86,6 @@ body.has-sidebar-page {
   border: none !important;
 }
 
-[data-list-item-name="all-categories"] {
-  padding: -1px;
+[data-link-name="all-categories"] {
+  padding: 15px;
 }
