--- a/scss/sidebar-desktop.scss
+++ b/scss/sidebar-desktop.scss
@@ -86,6 +86,6 @@ body.has-sidebar-page {
   border: none !important;
 }
 
-[data-link-name="all-categories"]:hover {
-  padding: 15px !important;
+[data-link-name="all-categories"] {
+  padding: 16px !important;
 }
