--- a/common/common.scss
+++ b/common/common.scss
@@ -694,6 +694,10 @@ html body #main-outlet {
   border-radius: 16px;
 }
 
+.active {
+  border: 1px rgba(var(--primary-rgb), 0.35)) solid !important;
+}
+
 .nav-pills > li a.active, .nav-pills > li button.active {
 	background: rgba(var(--primary-rgb), 0.5) !important;
   border: none !important;
