--- a/scss/sidebar-desktop.scss
+++ b/scss/sidebar-desktop.scss
@@ -55,6 +55,11 @@ body.has-sidebar-page {
   padding: 15px;
 }
 
+.sidebar-section-link-wrapper .sidebar-section-link .active, .sidebar-section-link-wrapper .sidebar-section-link .active {
+  border: 1px #3E3E3E solid;
+  padding: 15px;
+}
+
 .sidebar-wrapper {
   border: 1px solid #3E3E3E;
 }
